# class_chatbot

./: .env  Dockerfile  compose.yaml  pyproject.toml
src/class_chatbot/: __init__.py  main.py
